build/log/idf_py_stderr_output_63720
/home/pi/wifiRelay_2/main/wifiRelay.c: In function '_http_event_handler':
/home/pi/wifiRelay_2/main/wifiRelay.c:230:21: error: implicit declaration of function 'save_token_to_nvs' [-Wimplicit-function-declaration]
  230 |                     save_token_to_nvs(auth_token);  // Save token to NVS
      |                     ^~~~~~~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:82: esp-idf/main/CMakeFiles/__idf_main.dir/wifiRelay.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6157: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:149: all] Error 2
